r82 - july, 19, 2009
    * install : configDatabase > new action
    * apps/front/lib/DatabaseConfigForm.class.php : new form class
    * install : templates > template to display DatabaseConfig form


r81 - july, 19, 2009
    * DepensePeer : doSelectForAssociation() now returns a sfPropelPager
    * depense : index > paging system
    * DepensePeer.php : doSelectForAssociationId() > order by DATE DESC
    * RecettePeer.php : doSelectForAssociationId() > order by DATE DESC
    * recette : index > paging system
    * recette : actions > delete > check if user has required credentials
    * actions > delete > check if user has required credentials
    * membre : actions > delete > French message if failure
    * membre : actions > delete > check if user has required credentials
    * compte : actions > delete > check if user has required credentials
    * compte : actions > delete > check if user has  required credentials
    * activite : actions > delete > check if user has  required credentials
    * activite : actions > edit > check if user has  required credentials
    * Cotisation.php : new getAssociationId() method
    * cotisation : actions > delete > check if user has  required credentials
    * cotisation_type : actions > delete > check if user has  required 
      credentials


r80 - july, 19, 2009
    * association  : actions > mailing > get variables from Configurator class
	  and not from YAML file
    * apps/front/config/settings.yml : useless variables have been removed


r79 - july, 18, 2009
    * install : new module
    * install : index > display list of tests that succeed of failed
    * install : templates > isCacheFolderWritable partial
    * install : templates > isLogFolderWritable partial
    * install : templates > isPhpOpenSSLLoaded partial
    * install : templates > isPhpSmtpLoaded partial
    * install : templates > isMemoryLimitHighEnough partial
    * install : templates > isApacheModRewriteenabled partial